[tool.poetry]
name = "python-asyncio"
version = "0.1.0"
description = "Exploring asyncio in Python"
authors = ["Mau Trigo <mtrigo143@gmail.com>"]
readme = "README.md"
packages = [{include = "python_asyncio"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
